update Normal Summon

--- a/duels/13mar21/match10/duel1.html
+++ b/duels/13mar21/match10/duel1.html
@@ -18,7 +18,7 @@
     </div>
     <div class="turn-p2">
       <p>Joshua activate a <span class="cardName">Cosmic Cyclone</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, paying 1000 LP (Joshua 7000 LP), then target Marijn's Set<sup>1</sup> Spell/Trap. Joshua banish Marijn's Set<sup>1</sup> <span class="cardName">Ice Dragon's Prison</span><sup>1</sup>.</p>
-      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Whiptail</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Whiptail</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Whiptail</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p class="note">Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> gain the following effect:</p>
       <ul>
