--- a/duels/13mar21/match11/duel1.html
+++ b/duels/13mar21/match11/duel1.html
@@ -17,7 +17,7 @@
       <p>Donovan Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 2, and 3.</p>
     </div>
     <div class="turn-p2">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Kristian Special Summon a <span class="cardName">Psychic Wheeleder</span><sup>1</sup> from his hand to Monster Zone 3 in Defense Position.</p>
       <p>Kristian set the Link Arrow with his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> and his <span class="cardName">Psychic Wheeleder</span><sup>1</sup> to Link Summon a <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
       <p>Donovan activate his Set<sup>3</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 6500 LP). Donovan negate the Summon of Kristian's <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup> and destroy it.</p>
@@ -39,7 +39,7 @@
       <p>Donovan Set<sup>6</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
     </div>
     <div class="turn-p2">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Donovan activate his Set<sup>1</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 2100 LP (Donovan 2100 LP). Donovan negate the Summon of Kristian's <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> and destroy it.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup>, banishing it. Kristian add a <span class="cardName">Phantom Knights' Fog Blade</span> from his Deck to the hand.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup>. Kristian Special Summon his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
