--- a/duels/13mar21/match12/duel2.html
+++ b/duels/13mar21/match12/duel2.html
@@ -19,14 +19,14 @@
     </div>
     <div class="turn-p2">
       <p>Alex activate his Set<sup>3</sup> <span class="cardName">Anti-Spell Fragrance</span><sup>1</sup>. Its effects resolve.</p>
-      <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Monster Zone 3.</p>
       <p class="activation">Marco activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>.</p><div class="chain">
         <p>Alex activate his Set<sup>1</sup> <span class="cardName">Dragonmaid Tidying</span><sup>1</sup>, targeting his <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> and Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>. Alex return to the hand his <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> and Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Marco Set<sup>4&rarr;5</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 2.</p>
     </div>
     <div class="turn-p1">
-      <p>Alex Normal Summon an <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Alex Normal Summon an <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Alex set the Link Arrow with his <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup> to Link Summon a <span class="cardName">Striker Dragon</span><sup>1</sup> to the right-hand Extra Monster Zone.</p>
       <p>Alex banish his <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup> to Special Summon a <span class="cardName">White Dragon Wyverburster</span><sup>2</sup> from his hand to Monster Zone 5 in Attack Position.</p>
       <p>Alex attack directly with his <span class="cardName">Striker Dragon</span><sup>1</sup>. Marco take 1000 battle damage (Marco 7000 LP).</p>
@@ -35,7 +35,7 @@
       <p>Alex activate the effect of his <span class="cardName">White Dragon Wyverburster</span><sup>2</sup>. Alex add a <span class="cardName">Black Dragon Collapserpent</span> from his Deck to the hand.</p>
     </div>
     <div class="turn-p2">
-      <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> to Monster Zone 3.</p>
       <p>Marco declare an attack on Alex's <span class="cardName">Hieratic Seal of the Heavenly Spheres</span><sup>1</sup> with his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup>.</p>
       <p>Alex activate the effect of his <span class="cardName">Hieratic Seal of the Heavenly Spheres</span><sup>1</sup>, Tributing it. Alex return Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> to the hand.</p>
       <p>Alex activate the effect of his <span class="cardName">Hieratic Seal of the Heavenly Spheres</span><sup>1</sup>. Alex Special Summon a <span class="cardName">Rokket Tracer</span><sup>1</sup> from his Deck to Monster Zone 5 in Defense Position.</p>
