--- a/duels/13mar21/match15/duel1.html
+++ b/duels/13mar21/match15/duel1.html
@@ -14,7 +14,7 @@
       <p>Donovan Set<sup>1&rarr;4</sup> 4 Spells/Traps in Spell &amp; Trap Zones 2, 3, 4, and 5.</p>
     </div>
     <div class="turn-p2">
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position, then send a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, banishing it, then target his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>. The effect resolve.</p>
       <p class="note">Daniel's <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> have its Level decreased by 3 until the end of this turn.</p>
