--- a/duels/13mar21/match2/duel2.html
+++ b/duels/13mar21/match2/duel2.html
@@ -56,7 +56,7 @@
       <p class="activation">Benjamin activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Xuanwu</span><sup>2</sup>.</p><div class="chain">
         <p>Danyllo activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>2</sup> in his hand, discarding it. Danyllo negate the effect of Chain Link 1.</p> 
       </div><p class="resolution">The effect fizzle.</p>
-      <p>Benjamin Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>3</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Benjamin Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>3</sup> to Monster Zone 3.</p>
       <p>Benjamin activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, banishing it, then target his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>3</sup>. The effect resolve.</p>
       <p>Benjamin activate the effect of his <span class="cardName">Virtual World Gate - Xuanwu</span><sup>2</sup>, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>3</sup>. Benjamin change his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>3</sup> to Defense Position.</p>
     </div>
