--- a/duels/13mar21/match3/duel2.html
+++ b/duels/13mar21/match3/duel2.html
@@ -19,7 +19,7 @@
     <div class="turn-p2">
       <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
       <p class="note">Joshua's <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> apply its aura.</p>
-      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ramram</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ramram</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Ramram</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
       <p class="note">Joshua's <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> currently gain 400 ATK by its own effect.</p>
       <p>Joshua attack directly with his <span class="cardName">Zoodiac Boarbow</span><sup>1</sup>. Jamie take 500 battle damage (Jamie 7500 LP).</p>
@@ -40,11 +40,11 @@
         </div><p class="resolution">The effect fizzle.</p>
       </div><p class="resolution">Joshua send to the GY his <span class="cardName">Fire Formation - Tenki</span><sup>1</sup>, his <span class="cardName">Cosmic Cyclone</span><sup>1</sup>, and Jamie's <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>.</p>
       <p>Jamie activate the effect of his <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>, banishing it, then target his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>. Jamie Special Summon his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> to Monster Zone 3 in Defense Position, then send a <span class="cardName">Foolish Burial Goods</span><sup>1</sup> from his hand to the GY.</p>
-      <p>Jamie Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Jamie Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Joshua activate the effect of his <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup>, detaching his <span class="cardName">Zoodiac Ramram</span><sup>1</sup> and his <span class="cardName">Zoodiac Boarbow</span><sup>1</sup>. Joshua send to the GY Jamie's <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> and Jamie's <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>.</p>
     </div>
     <div class="turn-p2">
-      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ratpier</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ratpier</span><sup>1</sup> to Monster Zone 3.</p>
       <p class="activation">Joshua activate the effect of his <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p><div class="chain">
         <p>Jamie activate the effect of a <span class="cardName">PSY-Framegear Gamma</span> in his hand. Jamie Special Summon a <span class="cardName">PSY-Framegear Gamma</span><sup>1</sup> from his hand to Monster Zone 1 in Defense Position and a <span class="cardName">PSY-Frame Driver</span><sup>1</sup> from his Deck to Monster Zone 2 in Defense Position. Jamie negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p>
       </div><p class="resolution">The effect does not resolve.</p>
