--- a/duels/13mar21/match4/duel1.html
+++ b/duels/13mar21/match4/duel1.html
@@ -42,7 +42,7 @@
       </div><p class="resolution">Marijn Set<sup>10</sup> an <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>2</sup> from his Deck in Spell &amp; Trap Zone 4.</p>
     </div>
     <div class="turn-p2">
-      <p>Adi Normal Summon a <span class="cardName">Ronintoadin</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Adi Normal Summon a <span class="cardName">Ronintoadin</span><sup>1</sup> to Monster Zone 2.</p>
       <p class="activation">Marijn activate his Set<sup>9</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>.</p><div class="chain">
         <p class="activation">Adi activate his Set<sup>8</sup> <span class="cardName">Paleozoic Dinomischus</span><sup>2</sup>, targeting Marijn's <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>.</p><div class="chain">
           <p>Marijn activate his Set<sup>2</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 4000 LP (Marijn 4000 LP). Marijn negate the activation of Chain Link 2 and destroy Adi's <span class="cardName">Paleozoic Dinomischus</span><sup>2</sup>.</p>
