--- a/duels/13mar21/match5/duel1.html
+++ b/duels/13mar21/match5/duel1.html
@@ -16,7 +16,7 @@
     </div>
     <div class="turn-p2">
       <p>Joshua Set<sup>6&rarr;9</sup> 4 Spells/Traps in Spell &amp; Trap Zones 1, 2, 3, and 4.</p>
-      <p>Joshua Normal Summon an <span class="cardName">Altergeist Silquitous</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Joshua Normal Summon an <span class="cardName">Altergeist Silquitous</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Donovan activate his Set<sup>2</sup> <span class="cardName">Torrential Tribute</span><sup>1</sup>. Donovan destroy Joshua's <span class="cardName">Altergeist Silquitous</span><sup>1</sup>.</p>
       <p>Donovan activate his Set<sup>5</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>. Donovan Special Summon his <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup> to Monster Zone 1 in Defense Position.</p>
     </div>
@@ -71,7 +71,7 @@
     </div>
     <div class="turn-p2">
       <p>Joshua Set<sup>18</sup> a Spell/Trap from his hand in Spell &amp; Trap Zone 3.</p>
-      <p>Joshua Normal Summon an <span class="cardName">Altergeist Silquitous</span><sup>2</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Joshua Normal Summon an <span class="cardName">Altergeist Silquitous</span><sup>2</sup> to Monster Zone 4.</p>
       <p class="activation">Donovan activate his Set<sup>16</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>3</sup>.</p><div class="chain">
         <p>Donovan activate his Set<sup>17</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>3</sup>. Donovan Special Summon an <span class="cardName">Eldlich the Golden Lord</span><sup>2</sup> from his Deck to Monster Zone 1 in Defense Position.</p>
       </div><p class="resolution">Donovan Special Summon his <span class="cardName">Conquistador of the Golden Land</span><sup>3</sup> to Monster Zone 5 in Defense Position, then destroy Joshua's <span class="cardName">Altergeist Silquitous</span><sup>2</sup>.</p>
