--- a/duels/13mar21/match7/duel2.html
+++ b/duels/13mar21/match7/duel2.html
@@ -13,7 +13,7 @@
     <div class="turn-p1">
       <p>Aleksandar activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Aleksandar excavate from his Deck a <span class="cardName">Madolche Chateau</span>, two <span class="cardName">Madolche Promenade</span>, a <span class="cardName">PSY-Framegear Gamma</span>, a <span class="cardName">Cosmic Cyclone</span>, and a <span class="cardName">Madolche Ticket</span>. Aleksandar add a <span class="cardName">Madolche Ticket</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
       <p>Aleksandar activate a <span class="cardName">Madolche Ticket</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Its effects resolve.</p>
-      <p>Aleksandar Normal Summon a <span class="cardName">Madolche Magileine</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Aleksandar Normal Summon a <span class="cardName">Madolche Magileine</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Aleksandar activate the effect of his <span class="cardName">Madolche Magileine</span><sup>1</sup>. Aleksandar add a <span class="cardName">Madolche Petingcessoeur</span> from his Deck to the hand.</p>
       <p>Aleksandar activate the effect of a <span class="cardName">Madolche Petingcessoeur</span> in his hand. Aleksandar Special Summon a <span class="cardName">Madolche Petingcessoeur</span><sup>1</sup> from his hand to Monster Zone 2 in Defense Position.</p>
       <p>Aleksandar activate the effect of his <span class="cardName">Madolche Petingcessoeur</span><sup>1</sup>. Aleksandar Special Summon a <span class="cardName">Madolche Puddingcess</span><sup>1</sup> from his Deck to Monster Zone 4 in Defense Position.</p>
@@ -102,7 +102,7 @@
       <p>Marco overlay his <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup> and his <span class="cardName">Vermillion Dragon Mech</span><sup>1</sup> to Xyz Summon a <span class="cardName">True King of All Calamities</span><sup>2</sup> to Monster Zone 1 in Defense Position.</p>
     </div>
     <div class="turn-p1">
-      <p>Aleksandar Normal Summon a <span class="cardName">Madolche Hootcake</span><sup>2</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Aleksandar Normal Summon a <span class="cardName">Madolche Hootcake</span><sup>2</sup> to Monster Zone 3.</p>
       <p>Marco activate the effect of his <span class="cardName">True King of All Calamities</span><sup>2</sup>, detaching his <span class="cardName">Vermillion Dragon Mech</span><sup>1</sup>. The effect resolve.</p>
       <p>Aleksandar concede.</p>
     </div>
