--- a/duels/13mar21/match9/duel3.html
+++ b/duels/13mar21/match9/duel3.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position, then send a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>, banishing it. Daniel add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand, then send a <span class="cardName">Triple Tactics Talent</span><sup>1</sup> from his hand to the GY.</p>
       <p class="activation">Daniel activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup>.</p><div class="chain">
