--- a/duels/13mar21/match1/duel1.html
+++ b/duels/13mar21/match1/duel1.html
@@ -17,7 +17,7 @@
       <p class="activation">Daniel activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand.</p><div class="chain">
         <p>Leonardo activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Leonardo negate the effect of Chain Link 1.</p>
       </div><p class="resolution">The effect fizzle.</p>
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, banishing it, then target his <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup>. The effect resolve.</p>
       <p class="note">Daniel's <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> have its Level decreased by 3 until the end of this turn.</p>
       <p>Daniel tune his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> with his <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> to Synchro Summon a <span class="cardName">Ravenous Crocodragon Archethys</span><sup>1</sup> to the right-hand Extra Monster Zone in Defense Position.</p>
@@ -35,7 +35,7 @@
       <p>Leonardo activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Leonardo 7200 LP). Leonardo add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Daniel activate the effect of his <span class="cardName">True King of All Calamities</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup>. The effect resolve.</p>
       <p>Leonardo activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Leonardo add a <span class="cardName">Zoodiac Bunnyblast</span> from his Deck to the hand.</p>
-      <p>Leonardo Normal Summon a <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Leonardo Normal Summon a <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, targeting Leonardo's <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup>. Daniel shuffle into the Deck his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> and his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, then destroy Leonardo's <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup>.</p>
       <p>Leonardo Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 5.</p>
     </div>
