--- a/duels/13mar21/match1/duel2.html
+++ b/duels/13mar21/match1/duel2.html
@@ -16,7 +16,7 @@
     <div class="turn-p2">
       <p>Leonardo activate his Set<sup>1</sup> <span class="cardName">Mind Drain</span><sup>1</sup>, paying 1000 LP (Leonardo 7000 LP). Its effects resolve.</p>
       <p>Daniel activate an <span class="cardName">Emergency Teleport</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Daniel Special Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> from his Deck to Monster Zone 3 in Attack Position.</p>
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Daniel tune his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> with his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Synchro Summon a <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup> to Monster Zone 2 in Attack Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup>, banishing his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> and his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>, then target Leonardo's <span class="cardName">Mind Drain</span><sup>1</sup>. Daniel send Leonardo's <span class="cardName">Mind Drain</span><sup>1</sup> to the GY.</p>
       <p class="activation">Daniel activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup>.</p><div class="chain">
@@ -50,7 +50,7 @@
       </div><p class="resolution">The effect fizzle.</p>
     </div>
     <div class="turn-p1">
-      <p>Leonardo Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> from his hand to Monster Zone 1 in Attack Position.</p>
+      <p>Leonardo Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Monster Zone 1.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, targeting Leonardo's <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup>. Daniel shuffle into the Deck his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> and his <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup>, then destroy Leonardo's <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup>.</p>
       <p>Leonardo change his <span class="cardName">Nibiru, the Primal Being</span><sup>1</sup> to Defense Position.</p>
       <p>Leonardo change his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Defense Position.</p>
