--- a/duels/13mar21/match10/duel2.html
+++ b/duels/13mar21/match10/duel2.html
@@ -13,7 +13,7 @@
     <div class="turn-p1">
       <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Its effects resolve.</p>
       <p>Joshua activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Joshua 7200 LP). Joshua add a <span class="cardName">Conquistador of the Golden Land</span> from his Deck to the hand.</p>
-      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> from his hand to Monster Zone 1 in Attack Position.</p>
+      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Monster Zone 1.</p>
       <p>Joshua activate the effect of his <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup>. Joshua discard a <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup> and draw a card.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Chakanine</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
