--- a/duels/13mar21/match11/duel2.html
+++ b/duels/13mar21/match11/duel2.html
@@ -17,7 +17,7 @@
       <p class="activation">Kristian activate an <span class="cardName">Evenly Matched</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3.</p><div class="chain">
         <p>Donovan activate his Set<sup>1</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 4000 LP (Donovan 4000 LP). Donovan negate the activation of Chain Link 1 and destroy Kristian's <span class="cardName">Evenly Matched</span><sup>1</sup>.</p>
       </div><p class="resolution">The effect does not resolve.</p>
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Kristian activate the effect of a <span class="cardName">Kagemucha Knight</span> in his hand. Kristian Special Summon a <span class="cardName">Kagemucha Knight</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
       <p>Kristian set the Link Arrows with his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> and his <span class="cardName">Kagemucha Knight</span><sup>1</sup> to Link Summon a <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
       <p class="activation">Kristian activate the effect of his <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup>, sending a <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> from his Deck to the GY, then target itself.</p><div class="chain">
@@ -38,7 +38,7 @@
       <p>Donovan activate the effect of his <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>, banishing it. Donovan Set<sup>7</sup> a <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup> from his Deck in Spell &amp; Trap Zone 1.</p>
     </div>
     <div class="turn-p2">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Donovan activate his Set<sup>7</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>. Kristian concede.</p>
     </div>
   </div>
