--- a/duels/13mar21/match11/duel3.html
+++ b/duels/13mar21/match11/duel3.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Kristian Normal Summon a <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Kristian activate the effect of his <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup>. Kristian Special Summon a <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> from his Deck to Monster Zone 4 in Defense Position.</p>
       <p class="note">Kristian's <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> have its effects negated.</p>
       <p>Donovan activate the effect of a <span class="cardName">Dimension Shifter</span><sup>1</sup> in his hand, sending it to the GY. The effect resolve.</p>
@@ -26,7 +26,7 @@
     <div class="turn-p1">
       <p>Kristian activate his Set<sup>1</sup> <span class="cardName">Dragged Down into the Grave</span><sup>2</sup>. Kristian reveal in his hand a <span class="cardName">Phantom Knights' Rank-Up-Magic Force</span> and a <span class="cardName">Dragged Down into the Grave</span>. Donovan reveal in his hand a <span class="cardName">Red-Eyes Black Dragon</span> and a <span class="cardName">Nibiru, the Primal Being</span>. Kristian discard a <span class="cardName">Phantom Knights' Rank-Up-Magic Force</span><sup>1</sup> in his hand and a <span class="cardName">Nibiru, the Primal Being</span><sup>1</sup> in Donovan's hand, then each player draw a card.</p>
       <p>Kristian activate a <span class="cardName">Dragged Down into the Grave</span><sup>3</sup> from his hand in Spell &amp; Trap Zone 2. Kristian reveal in his hand an <span class="cardName">Artifact Lancea</span>. Donovan reveal in his hand a <span class="cardName">Red-Eyes Black Dragon</span> and a <span class="cardName">Pot of Extravagance</span>. Kristian discard an <span class="cardName">Artifact Lancea</span><sup>3</sup> in his hand and a <span class="cardName">Pot of Extravagance</span><sup>1</sup> in Donovan's hand, then each player draw a card.</p>
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup> from his hand to Monster Zone 1 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup> to Monster Zone 1.</p>
       <p>Donovan activate his Set<sup>3</sup> <span class="cardName">Torrential Tribute</span><sup>1</sup>. Donovan destroy Kristian's <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup>, Kristian's <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup>, and Kristian's <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup>.</p>
       <p>Kristian activate the effect of his <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup>. Kristian Special Summon a <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup> from his Deck to Monster Zone 2 in Attack Position.</p>
       <p>Kristian attack directly with his <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup>. Donovan take 1600 battle damage (Donovan 6400 LP).</p>
@@ -35,7 +35,7 @@
       <p>Donovan Set<sup>5</sup> a Spell/Trap in Spell &amp; Trap Zone 1.</p>
     </div>
     <div class="turn-p1">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> to Monster Zone 3.</p>
       <p class="note">Kristian's <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup> apply its effect.</p>
       <p>Kristian destroy his <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup>.</p>
       <p>Donovan activate his Set<sup>5</sup> <span class="cardName">Ice Dragon's Prison</span><sup>1</sup>, targeting Kristian's <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup>. Donovan banish Kristian's <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup> and Kristian's <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup>.</p>
@@ -45,7 +45,7 @@
       <p>Donovan Set<sup>6&rarr;7</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 4.</p>
     </div>
     <div class="turn-p1">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Kristian declare a direct attack with his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup>.</p>
       <p>Donovan activate his Set<sup>7</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>. Donovan Special Summon an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> from his Deck to Monster Zone 5 in Attack Position.</p>
       <p>Donovan activate his Set<sup>6</sup> <span class="cardName">Huaquero of the Golden Land</span><sup>2</sup>. Donovan Special Summon his <span class="cardName">Huaquero of the Golden Land</span><sup>2</sup> to Monster Zone 1 in Attack Position, then banish Kristian's <span class="cardName">Phantom Knights' Rank-Up-Magic Force</span><sup>1</sup>.</p>
