--- a/duels/13mar21/match14/duel3.html
+++ b/duels/13mar21/match14/duel3.html
@@ -24,7 +24,7 @@
       <p class="activation">Marco activate the effect of a <span class="cardName">Virtual World Xiezhi - Jiji</span> in his hand, targeting his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>.</p><div class="chain">
         <p>Donovan activate his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 6500 LP). Donovan negate the activation of Chain Link 1 and destroy a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> in Marco's hand.</p>
       </div><p class="resolution">The effect does not resolve.</p>
-      <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> to Monster Zone 3.</p>
       <p>Marco activate the effect of his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>. Marco Special Summon his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p class="note">Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> is treated as a Tuner, but is banished when it leave the field.</p>
       <p>Marco tune his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> with his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> to Synchro Summon a <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup> to the right-hand Extra Monster Zone in Attack Position.</p>
