--- a/duels/13mar21/match15/duel2.html
+++ b/duels/13mar21/match15/duel2.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his hand to Monster Zone 3 in Attack Position, then add a <span class="cardName">Virtual World Gate - Chuche</span> from his Deck to the hand.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
       <p>Daniel tune his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> with his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> to Synchro Summon a <span class="cardName">Ravenous Crocodragon Archethys</span><sup>1</sup> to Monster Zone 3 in Defense Position.</p>
