--- a/duels/13mar21/match3/duel1.html
+++ b/duels/13mar21/match3/duel1.html
@@ -13,7 +13,7 @@
     <div class="turn-p1">
       <p>Joshua activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Joshua excavate from his Deck an <span class="cardName">Eldlich the Golden Lord</span>, a <span class="cardName">Droll &amp; Lock Bird</span>, a <span class="cardName">Zoodiac Thoroughblade</span>, a <span class="cardName">Zoodiac Whiptail</span>, an <span class="cardName">Artifact Lancea</span>, and a <span class="cardName">Fire Formation - Tenki</span>. Joshua add a <span class="cardName">Fire Formation - Tenki</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
       <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
-      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ratpier</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ratpier</span><sup>1</sup> to Monster Zone 3.</p>
       <p class="activation">Joshua activate the effect of his <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p><div class="chain">
         <p>Jamie activate the effect of a <span class="cardName">Ghost Ogre &amp; Snow Rabbit</span><sup>1</sup> in his hand, sending it to the GY. Jamie destroy Joshua's <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p>
       </div><p class="resolution">Joshua send a <span class="cardName">Zoodiac Combo</span><sup>1</sup> from his Deck to the GY.</p>
@@ -26,7 +26,7 @@
       <p>Joshua activate his Set<sup>1</sup> <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup>. Joshua Special Summon his <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup> to Monster Zone 2 in Attack Position.</p>
     </div>
     <div class="turn-p1">
-      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Joshua Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
       <p>Joshua attack directly with his <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup>. Jamie take 1800 battle damage (Jamie 6200 LP).</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Drident</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
