--- a/duels/13mar21/match4/duel2.html
+++ b/duels/13mar21/match4/duel2.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Adi Normal Summon a <span class="cardName">Swap Frog</span><sup>1</sup> from his hand to Monster Zone 1 in Attack Position.</p>
+      <p>Adi Normal Summon a <span class="cardName">Swap Frog</span><sup>1</sup> to Monster Zone 1.</p>
       <p>Adi activate the effect of his <span class="cardName">Swap Frog</span><sup>1</sup>. Adi send a <span class="cardName">Ronintoadin</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Adi activate the effect of his <span class="cardName">Swap Frog</span><sup>1</sup>, returning it to the hand. The effect resolve.</p>
       <p>Adi Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 3, and 5.</p>
@@ -30,7 +30,7 @@
       </div><p class="resolution">Marijn Set<sup>9</sup> a <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup> from his Deck in Spell &amp; Trap Zone 4.</p>
     </div>
     <div class="turn-p1">
-      <p>Adi Normal Summon a <span class="cardName">Swap Frog</span><sup>2</sup> from his hand to Monster Zone 1 in Attack Position.</p>
+      <p>Adi Normal Summon a <span class="cardName">Swap Frog</span><sup>2</sup> to Monster Zone 1.</p>
       <p>Adi activate the effect of his <span class="cardName">Swap Frog</span><sup>2</sup>. Adi send a <span class="cardName">Dupe Frog</span><sup>1</sup> from his Deck to the GY.</p>
       <p class="activation">Adi activate the effect of his <span class="cardName">Ronintoadin</span><sup>1</sup>, banishing his <span class="cardName">Dupe Frog</span><sup>1</sup>.</p><div class="chain">
         <p class="activation">Marijn activate his Set<sup>5</sup> <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup>.</p><div class="chain">
