--- a/duels/13mar21/match6/duel1.html
+++ b/duels/13mar21/match6/duel1.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Kristian activate the effect of a <span class="cardName">Kagemucha Knight</span> in his hand. Kristian Special Summon a <span class="cardName">Kagemucha Knight</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup>, discarding a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup>. Kristian send a <span class="cardName">Phantom Knights' Wing</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Kristian set the Link Arrows with his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> and his <span class="cardName">Kagemucha Knight</span><sup>1</sup> to Link Summon a <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
