--- a/duels/13mar21/match6/duel2.html
+++ b/duels/13mar21/match6/duel2.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Sven Normal Summon a <span class="cardName">Rokket Tracer</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Sven Normal Summon a <span class="cardName">Rokket Tracer</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Sven set the Link Arrow with his <span class="cardName">Rokket Tracer</span><sup>1</sup> to Link Summon a <span class="cardName">Striker Dragon</span><sup>1</sup> to the right-hand Extra Monster Zone.</p>
       <p>Kristian activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
       <p>Sven activate the effect of his <span class="cardName">Striker Dragon</span><sup>1</sup>, targeting it and his <span class="cardName">Rokket Tracer</span><sup>1</sup>. Sven destroy his <span class="cardName">Striker Dragon</span><sup>1</sup> and add his <span class="cardName">Rokket Tracer</span><sup>1</sup> to the hand.</p>
@@ -24,7 +24,7 @@
       </div><p class="resolution">The effect fizzle.</p>
     </div>
     <div class="turn-p2">
-      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Kristian activate the effect of a <span class="cardName">Kagemucha Knight</span> in his hand. Kristian Special Summon a <span class="cardName">Kagemucha Knight</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup>, discarding a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>2</sup>. Kristian send a <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Kristian set the Link Arrows with his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> and his <span class="cardName">Kagemucha Knight</span><sup>1</sup> to Link Summon a <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup> to the right-hand Extra Monster Zone.</p>
