--- a/duels/13mar21/match9/duel1.html
+++ b/duels/13mar21/match9/duel1.html
@@ -20,7 +20,7 @@
         </div><p class="resolution">Danyllo negate the effect of Chain Link 1.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Daniel activate a <span class="cardName">Triple Tactics Talent</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Danyllo reveal in his hand a <span class="cardName">Nibiru, the Primal Being</span> and two <span class="cardName">Foolish Burial Goods</span>. Daniel shuffle a <span class="cardName">Nibiru, the Primal Being</span> from Danyllo's hand into the Deck.</p>
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Roshi - Laolao</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> from his hand to Monster Zone 3 in Defense Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, banishing it, then target his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>. The effect resolve.</p>
       <p class="note">Daniel's <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> have its Level increased by 3 until the end of this turn.</p>
@@ -42,7 +42,7 @@
       <p>Danyllo pass.</p>
     </div>
     <div class="turn-p1">
-      <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup> from his hand to Monster Zone 3 in Attack Position.</p>
+      <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup> to Monster Zone 3.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Roshi - Laolao</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Roshi - Laolao</span><sup>2</sup> from his hand to Monster Zone 2 in Defense Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>, banishing it. Daniel add a <span class="cardName">Virtual World Kirin - Lili</span> from his Deck to the hand, then send a <span class="cardName">Virtual World Roshi - Laolao</span><sup>3</sup> from his hand to the GY.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 1 in Attack Position, then send a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his Deck to the GY.</p>
